implement service to get vocabulary from git
