# app/controllers/VocabularyApiController.java
@@ -2,6 +2,7 @@ package controllers;
 
 import apiModels.Vocabulary;
 
+import play.api.mvc.RequestHeader;
 import play.mvc.Controller;
 import play.mvc.Result;
 import play.mvc.Http;
@@ -16,78 +17,76 @@ import swagger.SwaggerUtils;
 import com.fasterxml.jackson.core.type.TypeReference;
 
 
-import swagger.SwaggerUtils.ApiAction;
+    import swagger.SwaggerUtils.ApiAction;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2018-09-14T16:37:46.459+02:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaPlayFrameworkCodegen", date = "2018-10-02T16:23:40.254+02:00")
 
-public class VocabularyApiController extends Controller {
+    public class VocabularyApiController extends Controller {
 
-    private final VocabularyApiControllerImpInterface imp;
+        private final VocabularyApiControllerImpInterface imp;
     private final ObjectMapper mapper;
 
     @Inject
     private VocabularyApiController(VocabularyApiControllerImpInterface imp) {
         this.imp = imp;
-        mapper = new ObjectMapper();
+    mapper = new ObjectMapper();
     }
 
 
-    @ApiAction
-    public Result addVoc() throws Exception {
-        JsonNode nodebody = request().body().asJson();
-        Vocabulary body;
-        if (nodebody != null) {
-            body = mapper.readValue(nodebody.toString(), Vocabulary.class);
-        } else {
-            throw new IllegalArgumentException("'body' parameter is required");
+        @ApiAction
+        public Result addVoc() throws Exception {
+                JsonNode nodebody = request().body().asJson();
+                Vocabulary body;
+                if (nodebody != null) {
+                body = mapper.readValue(nodebody.toString(), Vocabulary.class);
+                } else {
+                    throw new IllegalArgumentException("'body' parameter is required");
+                }
+            play.api.mvc.RequestHeader requestHeader = request().asScala();
+            imp.addVoc(body, requestHeader);
+                return ok();
         }
-        imp.addVoc(body);
-        return ok();
-    }
 
-    @ApiAction
-    public Result deleteVoc(Long vocId) throws Exception {
-        imp.deleteVoc(vocId);
-        return ok();
-    }
-
-    @ApiAction
-    public Result getVocById(Long vocId) throws Exception {
-        String valueauthorization = request().getHeader("authorization");
-        String authorization;
-        if (valueauthorization != null) {
-            authorization = valueauthorization;
-        } else {
-            throw new IllegalArgumentException("'authorization' parameter is required");
+        @ApiAction
+        public Result deleteVoc(String name) throws Exception {
+            play.api.mvc.RequestHeader requestHeader = request().asScala();
+            imp.deleteVoc(name, requestHeader);
+                return ok();
         }
-        Vocabulary obj = imp.getVocById(vocId, authorization);
-        JsonNode result = mapper.valueToTree(obj);
-        return ok(result);
-    }
 
-    @ApiAction
-    public Result updateVoc() throws Exception {
-        JsonNode nodebody = request().body().asJson();
-        Vocabulary body;
-        if (nodebody != null) {
-            body = mapper.readValue(nodebody.toString(), Vocabulary.class);
-        } else {
-            throw new IllegalArgumentException("'body' parameter is required");
+        @ApiAction
+        public Result getVocById(String name) throws Exception {
+            play.api.mvc.RequestHeader requestHeader = request().asScala();
+            Vocabulary obj = imp.getVocById(name, requestHeader);
+                JsonNode result = mapper.valueToTree(obj);
+                return ok(result);
         }
-        imp.updateVoc(body);
-        return ok();
-    }
 
-    @ApiAction
-    public Result updateVocWithForm(Long vocId) throws Exception {
-        String valuename = (request().body().asMultipartFormData().asFormUrlEncoded().get("name"))[0];
-        String name;
-        if (valuename != null) {
-            name = valuename;
-        } else {
-            name = null;
+        @ApiAction
+        public Result updateVoc() throws Exception {
+                JsonNode nodebody = request().body().asJson();
+                Vocabulary body;
+                if (nodebody != null) {
+                body = mapper.readValue(nodebody.toString(), Vocabulary.class);
+                } else {
+                    throw new IllegalArgumentException("'body' parameter is required");
+                }
+            play.api.mvc.RequestHeader requestHeader = request().asScala();
+            imp.updateVoc(body, requestHeader);
+                return ok();
         }
-        imp.updateVocWithForm(vocId, name);
-        return ok();
+
+        @ApiAction
+        public Result updateVocWithForm(String name) throws Exception {
+                    String valuevoc = (request().body().asMultipartFormData().asFormUrlEncoded().get("voc"))[0];
+                    String voc;
+                    if (valuevoc != null) {
+                    voc = valuevoc;
+                    } else {
+                        voc = null;
+                    }
+            play.api.mvc.RequestHeader requestHeader = request().asScala();
+            imp.updateVocWithForm(name, voc, requestHeader);
+                return ok();
+        }
     }
-}
