# app/controllers/VocabularyApiControllerImpInterface.java
@@ -6,18 +6,19 @@ import play.mvc.Http;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.HashMap;
+import play.api.mvc.RequestHeader;
 
 
-@SuppressWarnings("RedundantThrows")
-public interface VocabularyApiControllerImpInterface {
-    void addVoc(Vocabulary body) throws Exception;
+    @SuppressWarnings("RedundantThrows")
+    public interface VocabularyApiControllerImpInterface {
+        void addVoc(Vocabulary body, RequestHeader headers) throws Exception;
 
-    void deleteVoc(Long vocId) throws Exception;
+        void deleteVoc(String name, RequestHeader headers) throws Exception;
 
-    Vocabulary getVocById(Long vocId, String authorization) throws Exception;
+        Vocabulary getVocById(String name, RequestHeader headers) throws Exception;
 
-    void updateVoc(Vocabulary body) throws Exception;
+        void updateVoc(Vocabulary body, RequestHeader headers) throws Exception;
 
-    void updateVocWithForm(Long vocId, String name) throws Exception;
+        void updateVocWithForm(String name, String voc, RequestHeader headers) throws Exception;
 
-}
+    }
